cpufreq: fix build with -lcpupower and kernel 4.7+

This patch removes --with-cpufreq-lib configure option! Now
GNOME Applets will try to autodetect cpupower library and will
fallback to cpufreq if it is not available.

In kernel 4.7+ cpufreq_cpu_exists function was removed, replace
it with cpupower_is_cpu_online which seems more suitable than
old function at least according to comment above if statement.

https://bugzilla.gnome.org/show_bug.cgi?id=789037